--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ custom_nanopb_protos =
 	+<lib/storage/proto/sensor.proto>
 	+<lib/storage/proto/gps.proto>
 	+<lib/storage/proto/state.proto>
+extra_scripts = pre:scripts/auto_firmware_specifier.py
 
 [env:pal_9k5]
 platform = ststm32
@@ -24,9 +25,8 @@ framework = stm32cube
 build_src_filter = +<stm32h7> +<pal_9k5> -<pal_9k5/hwil>
 test_framework = unity
 test_filter = stm32cube/*
-extra_scripts = 
+extra_scripts = ${env.extra_scripts}
 	pre:scripts/add_hardfloat.py
-	pre:scripts/auto_firmware_specifier.py
 build_flags = ${env.build_flags}
 	-O2
 	-march=armv7e-m
@@ -73,7 +73,7 @@ hwil_data_dir = data/skyshot-iri
 [env:pal_9k5_swil]
 platform = native
 build_src_filter = +<swil>
-extra_scripts =  pre:scripts/generate_hwil_data_file.py
+extra_scripts = pre:scripts/generate_hwil_data_file.py
 build_flags = ${env.build_flags}
 	-O2
 	-I.pio/build/${PIOENV}/nanopb/generated-src
@@ -85,6 +85,14 @@ hwil_data_dir = data/skyshot-iri
 
 [env:native]
 platform = native
+build_flags =
+	-O2
+	-I.pio/build/${PIOENV}/nanopb/generated-src
+	-I.pio/libdeps/${PIOENV}/Nanopb
+	-Ilib/gps
+	-Ilib/control
 test_framework = googletest
 test_filter = native/*
+debug_test = native/*
+debug_build_flags = -g -O0
 # platform_packages = platformio/tool-openocd@^3.1200.0
