--- a/platformio.ini
+++ b/platformio.ini
@@ -80,7 +80,7 @@ build_flags = ${env.build_flags}
 	-I.pio/libdeps/${PIOENV}/Nanopb
 	-DHWIL_TEST
 debug_build_flags = -g -O0
-hwil_data_dir = data/dm3
+hwil_data_dir = data/httyd-sustainer
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
