--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,7 @@
                 "string_view": "c",
                 "format": "c",
                 "initializer_list": "c",
-                "span": "c"
+                "span": "c",
+                "chrono": "c"
         }
 }
