Debounce MTP button, add separation delay

--- a/platformio.ini
+++ b/platformio.ini
@@ -67,7 +67,7 @@ build_src_filter = ${env:pal_9k5.build_src_filter}
 	+<pal_9k5/hwil>
 extra_scripts = ${env:pal_9k5.extra_scripts}
 	pre:scripts/generate_hwil_data_file.py
-hwil_data_dir = data/skyshot-iri
+hwil_data_dir = data/httyd-booster
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_9k5_swil]
@@ -80,7 +80,7 @@ build_flags = ${env.build_flags}
 	-I.pio/libdeps/${PIOENV}/Nanopb
 	-DHWIL_TEST
 debug_build_flags = -g -O0
-hwil_data_dir = data/httyd-sustainer
+hwil_data_dir = data/httyd-booster
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
