--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,6 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
 /html
+
+# Ignore the analysis.py file so everyone can make their own
+analysis.py
