Storage, buzzer functional version
- Storage working with tweaks to ensure RAM_D2 is used with DMA
- Changed erase flash cmd to reformat
- Freeze HAL timer during debug
- Gutted PSPCOM (will need rework for new radio)
- Fixed USB ejection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -121,6 +121,7 @@
                 "fs_common.h": "c",
                 "fs_core.h": "c",
                 "fs_config_ram_0.h": "c",
-                "rl_fs.h": "c"
+                "rl_fs.h": "c",
+                "tusb.h": "c"
         }
 }
