Sensors working, fix telemetry

--- a/platformio.ini
+++ b/platformio.ini
@@ -111,7 +111,7 @@ build_src_filter = ${env:pal_darkstar.build_src_filter}
 	+<pal_darkstar/hwil>
 extra_scripts = ${env:pal_darkstar.extra_scripts}
 	pre:scripts/generate_hwil_data_file.py
-hwil_data_dir = data/httyd-sustainer
+hwil_data_dir = data/pal-fsl-test
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_darkstar_swil]
@@ -124,7 +124,7 @@ build_flags = ${env.build_flags}
 	-I.pio/libdeps/${PIOENV}/Nanopb
 	-DHWIL_TEST
 debug_build_flags = -g -O0
-hwil_data_dir = data/httyd-sustainer
+hwil_data_dir = data/pal-fsl-test
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
