Add EH2 HWIL support and data

--- a/platformio.ini
+++ b/platformio.ini
@@ -62,11 +62,12 @@ debug_build_flags = -g -O0
 extends = env:pal_darkstar
 build_flags = ${env:pal_darkstar.build_flags}
 	-DHWIL_TEST
+	# -DHWIL_FIX_AXES
 build_src_filter = ${env:pal_darkstar.build_src_filter}
 	+<pal_darkstar/hwil>
 extra_scripts = ${env:pal_darkstar.extra_scripts}
 	pre:scripts/generate_hwil_data_file.py
-hwil_data_dir = data/pal-fsl-test
+hwil_data_dir = data/skyshot-iri-flipped
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_darkstar_swil]
@@ -78,8 +79,11 @@ build_flags = ${env.build_flags}
 	-I.pio/build/${PIOENV}/nanopb/generated-src
 	-I.pio/libdeps/${PIOENV}/Nanopb
 	-DHWIL_TEST
+	# -DHWIL_FIX_AXES
+upload_protocol = custom
+debug_tool = custom
 debug_build_flags = -g -O0
-hwil_data_dir = data/pal-fsl-test
+hwil_data_dir = data/eh2-sustainer-full
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
