--- a/platformio.ini
+++ b/platformio.ini
@@ -79,11 +79,11 @@ build_flags = ${env.build_flags}
 	-I.pio/build/${PIOENV}/nanopb/generated-src
 	-I.pio/libdeps/${PIOENV}/Nanopb
 	-DHWIL_TEST
-	# -DHWIL_FIX_AXES
+	-DHWIL_FIX_AXES # comment out for darkstar
 upload_protocol = custom
 debug_tool = custom
 debug_build_flags = -g -O0
-hwil_data_dir = data/eh2-sustainer-full
+hwil_data_dir = data/dm3
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
