--- a/platformio.ini
+++ b/platformio.ini
@@ -73,7 +73,9 @@ hwil_data_dir = data/skyshot-iri-flipped
 [env:pal_darkstar_swil]
 platform = native
 build_src_filter = +<swil>
-extra_scripts = pre:scripts/generate_hwil_data_file.py
+extra_scripts = 
+	pre:scripts/generate_hwil_data_file.py
+	# post:scripts/kf_plots.py # comment out to get rid of kf graphs
 build_flags = ${env.build_flags}
 	-O
 	-I.pio/build/${PIOENV}/nanopb/generated-src
