--- a/platformio.ini
+++ b/platformio.ini
@@ -81,11 +81,11 @@ build_flags = ${env.build_flags}
 	-I.pio/build/${PIOENV}/nanopb/generated-src
 	-I.pio/libdeps/${PIOENV}/Nanopb
 	-DHWIL_TEST
-	# -DHWIL_FIX_AXES  # comment out for darkstar
+    # -DHWIL_FIX_AXES  # comment out for darkstar
 upload_protocol = custom
 debug_tool = custom
 debug_build_flags = -g -O0
-hwil_data_dir = data/eh3-sustainer
+hwil_data_dir = data/eh2-booster
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
