Clear backup SRAM on remote reset, other minor changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -62,7 +62,7 @@ debug_build_flags = -g -O0
 extends = env:pal_darkstar
 build_flags = ${env:pal_darkstar.build_flags}
 	-DHWIL_TEST
-	# -DHWIL_FIX_AXES
+	-DHWIL_FIX_AXES
 build_src_filter = ${env:pal_darkstar.build_src_filter}
 	+<pal_darkstar/hwil>
 extra_scripts = ${env:pal_darkstar.extra_scripts}
