Initial backward compatibility for 9k5

--- a/platformio.ini
+++ b/platformio.ini
@@ -56,7 +56,6 @@ debug_build_flags = -g -O0
 # 	${platformio.packages_dir}/tool-openocd/bin/openocd
 # 	-f
 # 	openocd.cfg
-# platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_darkstar_hwil]
 extends = env:pal_darkstar
@@ -68,7 +67,6 @@ build_src_filter = ${env:pal_darkstar.build_src_filter}
 extra_scripts = ${env:pal_darkstar.extra_scripts}
 	pre:scripts/generate_hwil_data_file.py
 hwil_data_dir = data/skyshot-iri-flipped
-# platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:pal_darkstar_swil]
 platform = native
@@ -84,7 +82,16 @@ upload_protocol = custom
 debug_tool = custom
 debug_build_flags = -g -O0
 hwil_data_dir = data/eh3-sustainer
-# platform_packages = platformio/tool-openocd@^3.1200.0
+
+[env:pal_9k5]
+extends = env:pal_darkstar
+build_flags = ${env:pal_darkstar.build_flags}
+	-DCOMPAT_9K5
+
+[env:pal_9k5_hwil]
+extends = env:pal_darkstar_hwil
+build_flags = ${env:pal_darkstar_hwil.build_flags}
+	-DCOMPAT_9K5
 
 [env:native]
 platform = native
@@ -98,4 +105,3 @@ test_framework = googletest
 test_filter = native/*
 debug_test = native/*
 debug_build_flags = -g -O0
-# platform_packages = platformio/tool-openocd@^3.1200.0
