--- a/platformio.ini
+++ b/platformio.ini
@@ -43,6 +43,7 @@ build_flags = ${env.build_flags}
 	-DHSE_VALUE=48000000
 	-DUSE_FULL_LL_DRIVER
 	-DCFG_TUSB_MCU=OPT_MCU_STM32H7
+	-DPSPCOM_DEVICE_ID=0x10
 	-Wl,--undefined,_printf_float
 	-Wl,--undefined,_scanf_float
 	-Wl,--undefined=uxTopUsedPriority
@@ -68,7 +69,7 @@ extra_scripts = ${env:pal_darkstar.extra_scripts}
 	pre:scripts/generate_hwil_data_file.py
 hwil_data_dir = data/skyshot-iri-flipped
 
-[env:pal_darkstar_swil]
+[env:swil]
 platform = native
 build_src_filter = +<swil>
 extra_scripts = pre:scripts/generate_hwil_data_file.py
