--- a/platformio.ini
+++ b/platformio.ini
@@ -82,10 +82,11 @@ build_flags = ${env.build_flags}
 	-I.pio/libdeps/${PIOENV}/Nanopb
 	-DHWIL_TEST
     # -DHWIL_FIX_AXES  # comment out for darkstar
+	# also change antenna_up in src/swil/board_config.c 
 upload_protocol = custom
 debug_tool = custom
 debug_build_flags = -g -O0
-hwil_data_dir = data/eh2-booster
+hwil_data_dir = data/eh6-sustainer
 # platform_packages = platformio/tool-openocd@^3.1200.0
 
 [env:native]
